# git-host

./: .gitignore  LICENSE  README.md  bconf  bconf.mk  meson.build  meson_options.txt
src/: git-host.c  ssh-host-authorized-keys.c
src/git-host/: config.h.in  main.c  meson.build
src/ssh-host-authorized-keys/: main.c  meson.build
